# In order to fix unresolved symbols from json libraries without changing webrtc GN files, 
# the following code is appended during prepare stage, in bin/prepare.bat, 
# to webrtc\xplatform\webrtc\third_party\jsoncpp\BUILD.gn

#APPEND BEGIN
config("jsoncpp_config_sl") {
  include_dirs = [
    "overrides/include",
    "source/include",
  ]
}

static_library("jsoncpp_sl") {
  sources = [
    "overrides/include/json/value.h",
    "overrides/src/lib_json/json_reader.cpp",
    "overrides/src/lib_json/json_value.cpp",
    "source/include/json/assertions.h",
    "source/include/json/autolink.h",
    "source/include/json/config.h",
    "source/include/json/features.h",
    "source/include/json/forwards.h",
    "source/include/json/json.h",
    "source/include/json/reader.h",
    "source/include/json/writer.h",
    "source/src/lib_json/json_batchallocator.h",
    "source/src/lib_json/json_tool.h",
    "source/src/lib_json/json_writer.cpp",
  ]

  public_configs = [ ":jsoncpp_config_sl" ]

  defines = [ "JSON_USE_EXCEPTION=0" ]

  include_dirs = [ "source/src/lib_json" ]
}
#APPEND END
